# ShadowFerrum

./: CLAUDE.md  Cargo.toml  README.md  test_api.ps1
.claude/: settings.local.json
Docs/: Project.md  phase.md
assets/: logo-attribution.md
data/inodes/: 1.json
server/: Cargo.toml  README.md
server/src/: error.rs  lib.rs  main.rs
server/src/api/: auth_extractor.rs  handlers.rs  mod.rs  oauth_handlers.rs  state.rs
server/src/oauth/: auth.rs  mod.rs  models.rs  storage.rs
server/src/storage/: engine.rs  mod.rs  types.rs
server/templates/: consent.html  login.html
server/tests/: integration.rs  integration_auth.rs  oauth_integration.rs  security_tests.rs
server/tests/common/: mod.rs
