[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
httpdate = "1"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
bytes = "1"
