[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
httpdate = "1"

# OAuth and authentication dependencies
oxide-auth = "0.5"
oxide-auth-axum = "0.6"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
askama = "0.12"
async-trait = "0.1"
sha2 = "0.10"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
bytes = "1"
